# my-ffxi

./: .dockerignore  .editorconfig  .gitignore  dev.docker-compose.yml
.github/workflows/: build.yml  build_docker.yml  ci.yml  docker_build.yml  docker_test.yml  pr_checks.yml  publish_meshes.yml  runner_build.yml  runner_test.yml  test.yml
cmake/: StandardProjectSettings.cmake
docker/: README.md  alpine.Dockerfile  ubuntu.Dockerfile
documentation/: AI_Events.txt  battlefield_ids.txt  job_points_level_75_plan.md
ext/: CMakeLists.txt
modules/: init.txt
modules/trusts/: DEVELOPMENT_GUIDE.md  README.md
scripts/commands/: attackspeed.lua  checkmerits.lua  unlockjobpoints.lua
scripts/data/: element_tables.lua  level_correction.lua  skill_ranks.lua  status_effect_tables.lua
scripts/effects/: berserk.lua  defender.lua  leavegame.lua  mounted.lua
scripts/enum/: action.lua  behavior.lua  item.lua  magic.lua  mob_mod.lua  mob_pool.lua  mob_pools.lua  mob_skill.lua  mob_skills.lua  mob_super_family.lua  mod.lua  msg.lua  tick.lua  unique_event.lua
scripts/events/: egg_hunt_egg-stravaganza.lua  login_campaign.lua
scripts/globals/: ability.lua  abyssea.lua  additional_effects.lua  aftermath.lua  ambuscade.lua  appraisal.lua  artisan.lua  automatonweaponskills.lua  barge.lua  battlefield.lua  besieged.lua  bluemagic.lua  campaign.lua  casket_loot.lua  caskets.lua  chocobo.lua  chocobo_digging.lua  chocobo_names.lua  chocobo_racing.lua  chocobo_raising.lua  chocobo_riding_game.lua  colonization_reives.lua  confrontation.lua  conquest.lua  dark_ixion.lua  dealer_moogle.lua  deeds.lua  dynamis.lua  extravaganza.lua  festive_moogle.lua  fishing_contest.lua  follow.lua  gambits.lua  garrison.lua  garrison_data.lua  gobbie_mystery_box.lua  goblinfootprint.lua  harvest_festivals.lua  instance.lua  item_utils.lua  (+30 more)
scripts/items/: acorn_cookie.lua  agaricus_mushroom.lua  aileens_delight.lua  alabaligi.lua  altanas_repast.lua  altanas_repast_+1.lua  altanas_repast_+2.lua  anchovy_pizza.lua  anchovy_pizza_+1.lua  angler_stewpot.lua  anglers_cassoulet.lua  apingaut_snow_cone.lua  apkallu_egg.lua  apple_pie.lua  apple_pie_+1.lua  army_biscuit.lua  b.e.w._pitaru.lua  baked_apple.lua  baked_popoto.lua  balik_sandvici.lua  balik_sandvici_+1.lua  balik_sis.lua  balik_sis_+1.lua  bar_of_campfire_chocolate.lua  bastore_bream.lua  bastore_sardine.lua  bastore_sweeper.lua  bataquiche.lua  bataquiche_+1.lua  bean_daifuku.lua  bean_daifuku_+1.lua  beef_stewpot.lua  behemoth_steak.lua  behemoth_steak_+1.lua  berry_snow_cone.lua  betta.lua  bibiki_slug.lua  bibikibo.lua  bijou_glace.lua  bird_egg.lua  (+750 more)
scripts/mixins/: dynamis_beastmen.lua  fomor_hate.lua  helper_npc.lua  job_special.lua  pet_summon_setup.lua
scripts/utils/: common.lua  time_utils.lua  utils.lua
settings/default/: logging.lua  login.lua  main.lua  map.lua  test.lua
sql/: abilities.sql  augments.sql  blue_spell_list.sql  blue_traits.sql  item_basic.sql  item_equipment.sql  item_furnishing.sql  item_latents.sql  item_mods.sql  item_usable.sql  item_weapon.sql  merits.sql  mob_droplist.sql  mob_family_mods.sql  mob_family_system.sql  mob_groups.sql  mob_pets.sql  mob_pool_mods.sql  mob_pools.sql  mob_resistances.sql  mob_skill_lists.sql  mob_skills.sql  mob_spawn_sets.sql  mob_spawn_slots.sql  mob_spell_lists.sql  pet_skills.sql  spell_list.sql  status_effects.sql  synth_recipes.sql  traits.sql  transport.sql
src/common/: CMakeLists.txt  arguments.cpp  arguments.h  async.h  database.h  ipc_structs.h  logging.h  mmo.h  settings.cpp  settings.h  string.h  utils.h  xi.h
src/login/: auth_session.cpp  data_session.cpp  login_helpers.cpp  login_helpers.h  otp_helpers.h
src/map/: CMakeLists.txt  ability.cpp  ability.h  aman.cpp  attack.cpp  attackround.cpp  battlefield.cpp  battlefield_handler.cpp  campaign_system.cpp  command_handler.cpp  conquest_system.cpp  fishingcontest.cpp  (+53 more)
src/map/packets/: CMakeLists.txt  basic.h  char_check.cpp  char_recast.cpp  char_status.cpp  char_update.cpp  chat_message.h  inventory_item.cpp  merit_points_categories.cpp  merit_points_categories.h  message_basic.h  message_special.cpp  message_standard.h  party_define.cpp  party_define.h  roe_sparkupdate.cpp  synth_suggestion.cpp  synth_suggestion.h  trade_update.cpp
src/map/packets/c2s/: 0x00a_login.cpp  0x00c_gameok.cpp  0x00f_clstat.cpp  0x011_zone_transition.cpp  0x015_pos.cpp  0x01a_action.cpp  0x028_item_dump.cpp  0x032_trade_req.cpp  0x033_trade_res.cpp  0x034_trade_list.cpp  0x036_item_transfer.cpp  0x037_item_use.cpp  0x03d_black_edit.cpp  0x04b_fragments.cpp  0x052_equipset_check.cpp  0x053_lockstyle.cpp  0x058_recipe.cpp  0x05d_motion.cpp  0x05e_maprect.cpp  0x061_clistatus.cpp  0x06e_group_solicit_req.cpp  0x06f_group_leave.cpp  0x070_group_breakup.cpp  0x071_group_strike.cpp  0x076_group_list_req.cpp  0x078_group_checkid.cpp  0x085_shop_sell_set.cpp  0x096_combine_ask.cpp  0x0a2_dice.cpp  0x0aa_guild_buy.cpp  0x0ab_guild_buylist.cpp  0x0ac_guild_sell.cpp  0x0ad_guild_selllist.cpp  0x0b5_chat_std.cpp  0x0b6_chat_name.cpp  0x0be_merits.cpp  0x0bf_job_points_spend.cpp  0x0c4_group_comlink_active.cpp  0x0cb_myroom_is.cpp  0x0d2_map_group.cpp  (+28 more)
src/map/packets/s2c/: 0x00a_login.cpp  0x017_chat_std.cpp  0x017_chat_std.h  0x01b_job_info.cpp  0x01e_item_num.h  0x020_item_attr.cpp  0x023_item_trade_list.cpp  0x027_talknumwork2.cpp  0x027_talknumwork2.h  0x028_battle2.cpp  0x029_battle_message.cpp  0x029_battle_message.h  0x02a_talknumwork.cpp  0x02a_talknumwork.h  0x02d_battle_message2.cpp  0x02d_battle_message2.h  0x031_recipe.cpp  0x031_recipe.h  0x032_event.cpp  0x033_eventstr.cpp  0x034_eventnum.cpp  0x041_black_list.cpp  0x041_black_list.h  0x050_equip_list.cpp  0x052_eventucoff.cpp  0x055_scenarioitem.cpp  0x055_scenarioitem.h  0x058_assist.cpp  0x061_clistatus.cpp  0x063_miscdata.cpp  0x063_miscdata.h  0x063_miscdata_merits.cpp  0x06f_combine_ans.cpp  0x076_group_effects.h  0x085_guild_selllist.cpp  0x08c_merit.cpp  0x08d_job_points.cpp  0x08d_job_points.h  0x0bf_registration.h  0x0c8_group_tbl.cpp  (+20 more)
tools/: dbtool.py  price_checker.py
(+1218 files in other folders)
